# internal/core/handler/room/room_handler.go
@@ -37,6 +37,24 @@ func CleanupExpiredRoomsHandler(c *fiber.Ctx) error {
 	return c.JSON(result)
 }
 
+func KickMemberHandler(c *fiber.Ctx) error {
+	roomId := c.Params("roomId")
+	memberID := c.Params("memberId")
+	if roomId == "" || memberID == "" {
+		return c.Status(fiber.ErrBadRequest.Code).JSON(fiber.Map{"error": "Missing required fields"})
+	}
+
+	roomInfo, err := room.KickMember(roomId, memberID)
+	if err != nil {
+		if err.Error() == "member not found" {
+			return c.Status(fiber.StatusNotFound).JSON(fiber.Map{"error": err.Error()})
+		}
+		return c.Status(fiber.ErrInternalServerError.Code).JSON(fiber.Map{"error": err.Error()})
+	}
+
+	return c.JSON(fiber.Map{"data": roomInfo})
+}
+
 func GetRecentRoomsHandler(c *fiber.Ctx) error {
 	var id string
 	id = c.Params("id") // Guest Id fallback
